Implemented Mongoose models for the Movie and User schemas, and updated the API documentation to reflect the actual implementation using these models.

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -23,7 +23,7 @@
         personal information, and create a list of their favorite movies.
     </p>
     <h1>API Endpoints</h1>
-    <table style="width:80%">
+    <table class="my-table">
         <tr>
             <th>Request</th>
             <th>URL</th>
